<resources>
    <string name="app_name">Eventrack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register_logo">Register logo</string>
    <string name="login_logo">Login logo</string>
    <string name="josh_logo">josh_logo</string>
    <string name="login_josh_logo">login_josh_logo</string>
    <string name="reg_btn_text">Create new account</string>
    <string name="reg_login_btn_text">Already Registered</string>
    <string name="setup_name_hint">Your Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="new_post_venue">Venue</string>
    <string name="new_post_date">Date</string>
    <string name="new_post_time">Time</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post_image">Post Image</string>
    <string name="blog_venue_text_display">Venue :</string>
</resources>
