<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34sp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textColorHighlight="#FF5722"
        android:textDirection="locale"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo" />

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="108sp"
        android:layout_height="64sp"
        android:layout_marginTop="79sp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26sp"
        android:layout_marginEnd="26sp"
        android:layout_marginBottom="11sp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26sp"
        android:layout_marginEnd="26sp"
        android:layout_marginBottom="12sp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/reg_confim_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/reg_confim_pass"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26sp"
        android:layout_marginEnd="26sp"
        android:layout_marginBottom="15sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/reg_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26sp"
        android:layout_marginEnd="26sp"
        android:layout_marginBottom="33sp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confim_pass"
        tools:targetApi="o" />

    <Button
        android:id="@+id/reg_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="319sp"
        android:layout_height="52sp"
        android:layout_marginBottom="23sp"
        android:text="@string/reg_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/reg_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_width="322sp"
        android:layout_height="50sp"
        android:layout_marginBottom="69sp"
        android:text="@string/reg_login_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />
</android.support.constraint.ConstraintLayout>