<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_post_toolbar"
        android:layout_width="0sp"
        android:layout_height="66sp"
        android:background="@android:color/holo_orange_dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/new_post_image"
        android:layout_width="359sp"
        android:layout_height="223sp"
        android:layout_marginTop="48sp"
        android:contentDescription="@string/new_post_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_post_progress"
        app:srcCompat="@drawable/default_image" />

    <EditText
        android:id="@+id/new_post_desc"
        android:layout_width="360sp"
        android:layout_height="50sp"
        android:layout_marginTop="36sp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_desc_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_image"
        tools:targetApi="o" />

    <Button
        android:id="@+id/post_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="182sp"
        android:layout_height="50sp"
        android:layout_marginTop="36sp"
        android:backgroundTint="#F44336"
        android:text="@string/new_post_btn_hint"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_date" />

    <ProgressBar
        android:id="@+id/new_post_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0sp"
        android:layout_height="10sp"
        android:layout_marginTop="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_toolbar" />

    <EditText
        android:id="@+id/new_post_venue"
        android:layout_width="362sp"
        android:layout_height="50sp"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/new_post_venue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_desc" />

    <EditText
        android:id="@+id/new_post_date"
        android:layout_width="185sp"
        android:layout_height="50sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="20sp"
        android:ems="10"
        android:hint="DD/MM/YYYY"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/new_post_time"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_venue" />

    <EditText
        android:id="@+id/new_post_time"
        android:layout_width="152sp"
        android:layout_height="50sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="24sp"
        android:ems="10"
        android:hint="@string/new_post_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_venue" />

</android.support.constraint.ConstraintLayout>